testdata/baselines/reference/compiler/issue1943_export_star_reexport_dts.errors.txt
/index.ts(2,35): error TS2307: Cannot find module 'pkg-exporter/testing' or its corresponding type declarations.
/node_modules/pkg-exporter/dist/testing.d.ts(2,15): error TS2307: Cannot find module '#pkg-exporter/dep.ts' or its corresponding type declarations.


==== /node_modules/pkg-exporter/package.json (0 errors) ====
    {
      "name": "pkg-exporter",
      "type": "commonjs",
      "exports": {
        "./testing": {
          "types": "./dist/testing.d.ts",
          "default": "./dist/testing.js"
        }
      },
      "imports": {
        "#pkg-exporter/*.ts": {
          "types": "./dist/*.d.ts",
          "default": "./dist/*.js"
        }
      }
    }
    
    // Built declaration files (not source)
==== /node_modules/pkg-exporter/dist/dep.d.ts (0 errors) ====
    export declare function stubDynamicConfig(): string;
    
==== /node_modules/pkg-exporter/dist/testing.d.ts (1 errors) ====
    // Re-export using import map pattern - but now in a .d.ts file
    export * from "#pkg-exporter/dep.ts";
                  ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module '#pkg-exporter/dep.ts' or its corresponding type declarations.
    
==== /index.ts (1 errors) ====
    // This should work but may fail with: "Module has no exported member 'stubDynamicConfig'"
    import { stubDynamicConfig } from "pkg-exporter/testing";
                                      ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'pkg-exporter/testing' or its corresponding type declarations.
    
    const result = stubDynamicConfig();
    console.log(result);